[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "zaxis"
version = "0.1.1"
description = "Autonomous Drone Control SDK"
authors = [
    { name = "Ryan Rocha Moreira", email = "ryan@comipsilon.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
keywords = ["uav", "drone", "autonomy", "robotics", "navigation", "flight-control", "ai"]
license = "MIT"
license-files = ["LICENSE"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ryancomipsilon/zaxis"
Repository = "https://github.com/ryancomipsilon/zaxis"
Issues = "https://github.com/ryancomipsilon/zaxis/issues"

[tool.setuptools.packages.find]
where = ["src"]